Add final style

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webpack Exercise</title>
+    <link href="https://fonts.cdnfonts.com/css/bonus-giant" rel="stylesheet" />
+    <title>Leaderboard</title>
   </head>
   <body>
     <section id="titleSection">
@@ -27,6 +28,7 @@
             <input id="score" type="text" placeholder="Your Score" />
             <button id="add">Submit</button>
           </form>
+          <div class="high-score"></div>
         </div>
       </div>
     </section>
